--- a/core/locale/cs.po
+++ b/core/locale/cs.po
@@ -1339,7 +1339,7 @@ msgid "Enter a new username and password to change identity"
 msgstr "Vložte nový účet a heslo pro změnu identity:"
 
 #: templates/login.sudo.tmpl:18
-msgid "Enter the TWiki Administrator user or login as set in %1"
+msgid "Enter the Wiki Administrator user or login as set in %1"
 msgstr ""
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
@@ -2109,7 +2109,7 @@ msgstr ""
 
 #: templates/login.sudo.tmpl:7
 #, fuzzy
-msgid "Please enter the TWiki admin password"
+msgid "Please enter the Wiki admin password"
 msgstr "Vložte prosím Váš účet a heslo:"
 
 #: templates/login.tmpl:14
@@ -3425,10 +3425,10 @@ msgstr "Už jste registrován"
 
 #: templates/messages.tmpl:357
 msgid ""
-"You may be able to get your TWiki administrator to change the settings if "
+"You may be able to get your Wiki administrator to change the settings if "
 "they are inappropriate for your environment."
 msgstr ""
-"Váš TWiki administrátor může změnit nastavení, pokud jsou nevhodné pro Vaše "
+"Váš Wiki administrátor může změnit nastavení, pokud jsou nevhodné pro Vaše "
 "prostředí."
 
 #: templates/messages.tmpl:520
@@ -3528,7 +3528,7 @@ msgstr "Vaše značka pro kopírování/vložení:"
 #: templates/messages.tmpl:178
 msgid ""
 "Your system may not support changing passwords through TWiki. Check with "
-"your TWiki administrator."
+"your Wiki administrator."
 msgstr ""
 
 #: templates/messages.tmpl:11
