--- a/core/locale/fi.po
+++ b/core/locale/fi.po
@@ -1242,7 +1242,7 @@ msgid "Enter a new username and password to change identity"
 msgstr ""
 
 #: templates/login.sudo.tmpl:18
-msgid "Enter the TWiki Administrator user or login as set in %1"
+msgid "Enter the Wiki Administrator user or login as set in %1"
 msgstr ""
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
@@ -1950,7 +1950,7 @@ msgstr ""
 
 #: templates/login.sudo.tmpl:7
 #, fuzzy
-msgid "Please enter the TWiki admin password"
+msgid "Please enter the Wiki admin password"
 msgstr "Kirjoita käyttäjätunnus ja salasana"
 
 #: templates/login.tmpl:14
@@ -3143,7 +3143,7 @@ msgstr "*Et* ole rekisteröitynyt."
 
 #: templates/messages.tmpl:357
 msgid ""
-"You may be able to get your TWiki administrator to change the settings if "
+"You may be able to get your Wiki administrator to change the settings if "
 "they are inappropriate for your environment."
 msgstr ""
 
@@ -3230,7 +3230,7 @@ msgstr ""
 #: templates/messages.tmpl:178
 msgid ""
 "Your system may not support changing passwords through TWiki. Check with "
-"your TWiki administrator."
+"your Wiki administrator."
 msgstr ""
 
 #: templates/messages.tmpl:11
