--- a/core/locale/pl.po
+++ b/core/locale/pl.po
@@ -1345,7 +1345,7 @@ msgid "Enter a new username and password to change identity"
 msgstr "Podaj nową nazwę konta użytkownika i hasło:"
 
 #: templates/login.sudo.tmpl:18
-msgid "Enter the TWiki Administrator user or login as set in %1"
+msgid "Enter the Wiki Administrator user or login as set in %1"
 msgstr ""
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
@@ -2122,7 +2122,7 @@ msgstr "Powiadom administratora: %1"
 
 #: templates/login.sudo.tmpl:7
 #, fuzzy
-msgid "Please enter the TWiki admin password"
+msgid "Please enter the Wiki admin password"
 msgstr "Podaj nazwę konta użytkownika i hasło:"
 
 #: templates/login.tmpl:14
@@ -3436,7 +3436,7 @@ msgstr "Nie zostałeś zarejestrowany"
 
 #: templates/messages.tmpl:357
 msgid ""
-"You may be able to get your TWiki administrator to change the settings if "
+"You may be able to get your Wiki administrator to change the settings if "
 "they are inappropriate for your environment."
 msgstr ""
 "W celu zmiany ustawień osobistych należy skontaktować się z administratorem."
@@ -3542,7 +3542,7 @@ msgstr "Twój podpis:"
 #: templates/messages.tmpl:178
 msgid ""
 "Your system may not support changing passwords through TWiki. Check with "
-"your TWiki administrator."
+"your Wiki administrator."
 msgstr ""
 "Prawdopodobnie ta instalacja TWiki nie pozwala zmieniać hasła. Skontaktuj "
 "się z administratorem."
