--- a/core/locale/uk.po
+++ b/core/locale/uk.po
@@ -1329,7 +1329,7 @@ msgid "Enter a new username and password to change identity"
 msgstr ""
 
 #: templates/login.sudo.tmpl:18
-msgid "Enter the TWiki Administrator user or login as set in %1"
+msgid "Enter the Wiki Administrator user or login as set in %1"
 msgstr ""
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
@@ -2105,7 +2105,7 @@ msgid "Please contact %1."
 msgstr "Будь ласка, зв'яжіться з %1."
 
 #: templates/login.sudo.tmpl:7
-msgid "Please enter the TWiki admin password"
+msgid "Please enter the Wiki admin password"
 msgstr ""
 
 #: templates/login.tmpl:14
@@ -3425,10 +3425,10 @@ msgstr "Ви *не* були зареєстровані."
 
 #: templates/messages.tmpl:357
 msgid ""
-"You may be able to get your TWiki administrator to change the settings if "
+"You may be able to get your Wiki administrator to change the settings if "
 "they are inappropriate for your environment."
 msgstr ""
-"Ви можете спробувати попросити Вашого адміністратора TWiki змінити "
+"Ви можете спробувати попросити Вашого адміністратора Wiki змінити "
 "налаштування якщо вони не підходять Вашому оточенню."
 
 #: templates/messages.tmpl:520
@@ -3528,9 +3528,9 @@ msgstr "Ваш підпис для копіювання/вставки:"
 #: templates/messages.tmpl:178
 msgid ""
 "Your system may not support changing passwords through TWiki. Check with "
-"your TWiki administrator."
+"your Wiki administrator."
 msgstr ""
-"Ваша система можливо не підтримує зміну паролів через TWiki. Зв'яжіться з "
+"Ваша система можливо не підтримує зміну паролів через Wiki. Зв'яжіться з "
 "адміністратором TWiki."
 
 #: templates/messages.tmpl:11
