--- a/core/locale/zh-cn.po
+++ b/core/locale/zh-cn.po
@@ -1263,8 +1263,8 @@ msgid "Enter a new username and password to change identity"
 msgstr "输入新用户名和密码以改变身份"
 
 #: templates/login.sudo.tmpl:18
-msgid "Enter the TWiki Administrator user or login as set in %1"
-msgstr "输入TWiki管理员用户名或登录为 %1 组"
+msgid "Enter the Wiki Administrator user or login as set in %1"
+msgstr "输入Wiki管理员用户名或登录为 %1 组"
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
 msgid ""
@@ -1996,8 +1996,8 @@ msgid "Please contact %1."
 msgstr "请联系 %1 。"
 
 #: templates/login.sudo.tmpl:7
-msgid "Please enter the TWiki admin password"
-msgstr "请输入TWiki管理员的用户名和密码"
+msgid "Please enter the Wiki admin password"
+msgstr "请输入Wiki管理员的用户名和密码"
 
 #: templates/login.tmpl:14
 msgid "Please enter your username and password"
@@ -3221,7 +3221,7 @@ msgstr "您*尚未*注册"
 
 #: templates/messages.tmpl:357
 msgid ""
-"You may be able to get your TWiki administrator to change the settings if "
+"You may be able to get your Wiki administrator to change the settings if "
 "they are inappropriate for your environment."
 msgstr "如果您觉得环境设置不合适，可以让TWiki的管理员帮助更改。"
 
@@ -3316,7 +3316,7 @@ msgstr "您用于复制/粘贴的签名"
 #: templates/messages.tmpl:178
 msgid ""
 "Your system may not support changing passwords through TWiki. Check with "
-"your TWiki administrator."
+"your Wiki administrator."
 msgstr "您的系统也许不支持通过TWiki修改密码，请联系TWiki管理员。"
 
 #: templates/messages.tmpl:11
