--- a/core/locale/zh-tw.po
+++ b/core/locale/zh-tw.po
@@ -1264,8 +1264,8 @@ msgid "Enter a new username and password to change identity"
 msgstr "輸入新用戶名和密碼以改變身份"
 
 #: templates/login.sudo.tmpl:18
-msgid "Enter the TWiki Administrator user or login as set in %1"
-msgstr "輸入TWiki管理員用戶名或登錄為 %1 組"
+msgid "Enter the Wiki Administrator user or login as set in %1"
+msgstr "輸入Wiki管理員用戶名或登錄為 %1 組"
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
 msgid ""
@@ -1997,8 +1997,8 @@ msgid "Please contact %1."
 msgstr "請聯繫 %1 。"
 
 #: templates/login.sudo.tmpl:7
-msgid "Please enter the TWiki admin password"
-msgstr "請輸入TWiki管理員的用戶名和密碼"
+msgid "Please enter the Wiki admin password"
+msgstr "請輸入Wiki管理員的用戶名和密碼"
 
 #: templates/login.tmpl:14
 msgid "Please enter your username and password"
@@ -3222,9 +3222,9 @@ msgstr "您*尚未*註冊"
 
 #: templates/messages.tmpl:357
 msgid ""
-"You may be able to get your TWiki administrator to change the settings if "
+"You may be able to get your Wiki administrator to change the settings if "
 "they are inappropriate for your environment."
-msgstr "如果您覺得環境設置不合適，可以讓TWiki的管理員幫助更改。"
+msgstr "如果您覺得環境設置不合適，可以讓Wiki的管理員幫助更改。"
 
 #: templates/messages.tmpl:520
 msgid ""
@@ -3317,8 +3317,8 @@ msgstr "您用於複製/粘貼的簽名"
 #: templates/messages.tmpl:178
 msgid ""
 "Your system may not support changing passwords through TWiki. Check with "
-"your TWiki administrator."
-msgstr "您的系統也許不支援通過TWiki修改密碼，請聯繫TWiki管理員。"
+"your Wiki administrator."
+msgstr "您的系統也許不支援通過TWiki修改密碼，請聯繫Wiki管理員。"
 
 #: templates/messages.tmpl:11
 msgid "Your user name has been removed from the Authentication System."
