--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -1346,10 +1346,10 @@ msgstr ""
 "mot de passe."
 
 #: templates/login.sudo.tmpl:18
-msgid "Enter the TWiki Administrator user or login as set in %1"
+msgid "Enter the Wiki Administrator user or login as set in %1"
 msgstr ""
 "Entrez le nom d'utilisateur ou d'utilisatrice servant à l'administration de "
-"TWiki, qui a été défini dans %1"
+"Wiki, qui a été défini dans %1"
 
 #: twikiplugins/ClassicSkin/templates/login.classic.tmpl:21
 msgid ""
@@ -2136,8 +2136,8 @@ msgid "Please contact %1."
 msgstr "Veuillez contacter %1."
 
 #: templates/login.sudo.tmpl:7
-msgid "Please enter the TWiki admin password"
-msgstr "Veuillez le mot de passe d'administration de TWiki"
+msgid "Please enter the Wiki admin password"
+msgstr "Veuillez le mot de passe d'administration de Wiki"
 
 #: templates/login.tmpl:14
 msgid "Please enter your username and password"
@@ -3482,11 +3482,11 @@ msgstr "Vous n'avez *pas* été inscrit·e."
 
 #: templates/messages.tmpl:357
 msgid ""
-"You may be able to get your TWiki administrator to change the settings if "
+"You may be able to get your Wiki administrator to change the settings if "
 "they are inappropriate for your environment."
 msgstr ""
 "Si elles ne sont pas adaptées à votre contexte, vous pouvez demander aux "
-"administrateurs et administratrices de ce TWiki de les modifier."
+"administrateurs et administratrices de ce Wiki de les modifier."
 
 #: templates/messages.tmpl:520
 msgid ""
@@ -3593,7 +3593,7 @@ msgstr "Votre signature, prête à être copiée/collée :"
 #: templates/messages.tmpl:178
 msgid ""
 "Your system may not support changing passwords through TWiki. Check with "
-"your TWiki administrator."
+"your Wiki administrator."
 msgstr ""
 "Le système ne permet peut-être pas de changer son mot de passe. Demandez aux "
 "administrateurs et administratrices de ce wiki."
