Item109: phase1 of WikiAdminGroup->AdminGroup
git-svn-id: http://svn.foswiki.org/trunk@672 0b4bb1d4-4e5a-0410-9cc4-b2b747904278

--- a/core/locale/fr.po
+++ b/core/locale/fr.po
@@ -819,7 +819,7 @@ msgid ""
 "in WebPreferences."
 msgstr ""
 "Par défaut, la consultation du web Trash est réservée aux administrateurs et "
-"administratrices de ce TWiki, qui sont membres du %MAINWEB%.WikiAdminGroup. "
+"administratrices de ce TWiki, qui sont membres du %MAINWEB%.AdminGroup. "
 "Si vous souhaitez désactiver cette restriction, enlevez la ligne "
 "=ALLOWWEBVIEW= de la page WebPreferences."
 
