--- a/core/tools/pkg/debian/po/cs.po
+++ b/core/tools/pkg/debian/po/cs.po
@@ -106,10 +106,10 @@ msgstr "Vyžadována změna v nastavení registrace uživatelů"
 #. Description
 #: ../templates:4001
 msgid ""
-"After you have created yourself a user, edit the Main.WikiAdminGroup to "
+"After you have created yourself a user, edit the Main.AdminGroup to "
 "restrict Admin privileges to that user."
 msgstr ""
-"Až si pro sebe vytvoříte uživatele, upravte Main.WikiAdminGroup a omezte "
+"Až si pro sebe vytvoříte uživatele, upravte Main.AdminGroup a omezte "
 "správcovská oprávnění na vytvořeného uživatele."
 
 #. Type: string
@@ -222,7 +222,7 @@ msgstr "Zadaná hesla nesouhlasí. Zkuste je zadat znovu."
 #~ "the users are created manually by the administrator use TWiki RenameTopic "
 #~ "to rename the TWikiRegistration to TWikiRegistrationPub, and "
 #~ "TWikiRegistrationDefault to TWikiRegistration. IMPORTANT: After you have "
-#~ "created yourself a user, edit the Main.WikiAdminGroup to restrict Admin "
+#~ "created yourself a user, edit the Main.AdminGroup to restrict Admin "
 #~ "privileges"
 #~ msgstr ""
 #~ "Výchozí instalace TWiki v Debianu je nastavena tak, aby při registraci "
@@ -232,4 +232,4 @@ msgstr "Zadaná hesla nesouhlasí. Zkuste je zadat znovu."
 #~ "pomocí TWiki RenameToppic, kde přejmenujete TWikiRegistration na "
 #~ "TWikiRegistrationPub a poté TWikiRegistrationDefault na "
 #~ "TWikiRegistration. DŮLEŽITÉ: Až si pro sebe vytvoříte uživatele, omezte "
-#~ "administrátorská oprávnění úpravou Main.WikiAdminGroup."
+#~ "administrátorská oprávnění úpravou Main.AdminGroup."
