--- a/core/tools/pkg/debian/po/sv.po
+++ b/core/tools/pkg/debian/po/sv.po
@@ -122,11 +122,11 @@ msgstr "Konfiguration av administrationsanvändaren krävs"
 #. Description
 #: ../templates:4001
 msgid ""
-"After you have created yourself a user, edit the Main.WikiAdminGroup to "
+"After you have created yourself a user, edit the Main.AdminGroup to "
 "restrict Admin privileges to that user."
 msgstr ""
 "Efter att du har skapat en användare åt dig själv, redigera Main."
-"WikiAdminGroup för att begränsa Admin-behörigheten till den användaren."
+"AdminGroup för att begränsa Admin-behörigheten till den användaren."
 
 #. Type: string
 #. Description
@@ -240,7 +240,7 @@ msgstr ""
 #~ "the users are created manually by the administrator use TWiki RenameTopic "
 #~ "to rename the TWikiRegistration to TWikiRegistrationPub, and "
 #~ "TWikiRegistrationDefault to TWikiRegistration. IMPORTANT: After you have "
-#~ "created yourself a user, edit the Main.WikiAdminGroup to restrict Admin "
+#~ "created yourself a user, edit the Main.AdminGroup to restrict Admin "
 #~ "privileges"
 #~ msgstr ""
 #~ "Standardinstallation i Debian av TWiki är konfigurerad att skapa nya "
@@ -250,5 +250,5 @@ msgstr ""
 #~ "administratören använd TWiki RenameTopic för att byta namn på "
 #~ "TWikiRegistration till TWikiRegistrationPub och TWikiRegistrationDefault "
 #~ "till TWikiRegistration. VIKTIGT: Efter att du har skapat din egna "
-#~ "användare, redigera Main.WikiAdminGroup för att begränsa "
+#~ "användare, redigera Main.AdminGroup för att begränsa "
 #~ "administrationsrättigheterna."
