--- a/core/tools/pkg/debian/po/fr.po
+++ b/core/tools/pkg/debian/po/fr.po
@@ -103,10 +103,10 @@ msgstr "Configuration obligatoire de l'enregistrement des utilisateurs"
 #. Description
 #: ../templates:4001
 msgid ""
-"After you have created yourself a user, edit the Main.WikiAdminGroup to "
+"After you have created yourself a user, edit the Main.AdminGroup to "
 "restrict Admin privileges to that user."
 msgstr ""
-"Après avoir créé un utilisateur, veuillez éditer Main.WikiAdminGroup pour "
+"Après avoir créé un utilisateur, veuillez éditer Main.AdminGroup pour "
 "restreindre les privilèges de l'administrateur à cet utilisateur."
 
 #. Type: string
